--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ dependencies {
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.assertj:assertj-core:3.12.1'
+    testImplementation 'org.mockito:mockito-core:2.+'
+    testImplementation 'org.powermock:powermock-module-junit4:2.0.2'
+    testImplementation 'org.powermock:powermock-api-mockito2:2.0.2'
     
 }
 
@@ -32,7 +35,10 @@ jacocoTestCoverageVerification {
     violationRules {
         rule {
             element = 'CLASS'
-            excludes =  ['**.App']
+            excludes =  ['**.App',
+                         '**.domain.*',
+                         '**.utils.*'
+            ]
 
             limit {
                 counter = 'LINE'
