--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,8 @@ application {
 jacocoTestReport {
     reports {
         html.enabled = true
-        xml.enabled = false
+        xml.enabled = true
+        xml.destination = "${buildDir}/reports/jacoco/report.xml"
         csv.enabled = false
     }
 }
