--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ jacocoTestReport {
     reports {
         html.enabled = true
         xml.enabled = true
-        xml.destination = "${buildDir}/reports/jacoco/report.xml"
+        xml.destination = file("${buildDir}/reports/jacoco/report.xml")
         csv.enabled = false
     }
 }
